Reader and writer are no longer define in method and test using local file